--- a/Script Final Assignment.qmd
+++ b/Script Final Assignment.qmd
@@ -27,7 +27,6 @@ This narrative should articulate the reasoning behind strategic choices, describ
 
 ### LIBRARY
 
-
 ```{r}
 rm(list = ls())
 library(haven)
@@ -42,7 +41,7 @@ library(dplyr)
 ### Data
 
 ```{r}
-data <- read_dta("./ZA7575.dta")
+data <- read_dta("Data/ZA7575.dta")
 
 ```
 
@@ -107,7 +106,6 @@ data_cleaning_1 <- data_cleaning_1 %>%
     )
   )
 ```
-
 
 The variables p2,p4,p3r,p4 and p5 where variable related to certain characteristics of the interview itself, we deemed them not relevant due to their context.
 
@@ -227,7 +225,6 @@ data_cleaning_5 <- data_cleaning_4 %>%
 ```{r}
 categorical_vars <- names(data_cleaning_5)[sapply(data_cleaning_5, function(x) is.factor(x) | is.character(x))]
 
-# Print the names of categorical variables
 print(categorical_vars)
 
 ```
@@ -255,6 +252,8 @@ All the variables tested show a statistically significant association with your 
 continuous_vars <- names(data_cleaning_5)[sapply(data_cleaning_5, function(x) is.numeric(x) | is.integer(x))]
 ```
 
+As it was taking too much time, I found this why online to do it with cluster
+
 ```{r}
 library(parallel)
 ```
@@ -277,7 +276,6 @@ clusterExport(cl, varlist = c("data_cleaning_5", "performTest"))
 # Perform the tests in parallel
 results <- parLapply(cl, continuous_vars, performTest)
 
-# Stop the cluster
 stopCluster(cl)
 ```
 
@@ -311,6 +309,8 @@ print(significant_vars)
 That's the code that helps subset the data set based on the significant variables.
 
 ```{r}
+
+#this code is not working!!
 non_zero_vars <- non_zero_vars[-1] 
 
 non_zero_vars
@@ -329,7 +329,7 @@ print(non_significant_vars)
 
 ## First look at association
 
-### Gender
+### Gender (I have a question about this sofi)
 
 Assumption from literature –\> men less supportive than women
 
@@ -461,16 +461,15 @@ plot_binary_2
 complete_data <- data_cleaning_5 |> 
   select(-non_significant_vars) |> 
   select(-c(qa1:qb9_12)) |> 
-  mutate_if(is.character, as.numeric)
+  mutate_if(is.character, as.numeric) # why this??
 
-target_columns <- c("qc19", "qc20")
+target_columns <- c("qc19", "qc20") # why are two target variables?? Sofi
 
 # Convert target_columns to numeric
 complete_data[target_columns] <- lapply(complete_data[target_columns], as.numeric)
 
 # Filter out rows with missing values in target columns
 complete_data <- complete_data[complete.cases(complete_data[target_columns]), ]
-
 
 
 #defining columns that will work for the correlation matrix
@@ -513,4 +512,32 @@ corr5 <- corrplot(cor_matrix5, method = "circle", tl.col = "black", tl.srt = 45)
 #6
 cor_matrix6 <- cor(complete_data[target_columns], subset_6, use = "pairwise.complete.obs")
 corr6 <- corrplot(cor_matrix6, method = "circle", tl.col = "black", tl.srt = 45)
+```
+
+COUNTRY LEVEL VARIABLES (EXTRA)
+
+```{r}
+library(haven)
+data_extra_by_Country <- read_dta("Data/Extra Data.dta")
+all_na_columns <- sapply(data_extra_by_Country, function(x) all(is.na(x)))
+
+# There are columns all NA because I filtered in stata for the year and for each country certain variables that where interesting
+
+columns_to_remove <- names(data_extra_by_Country)[all_na_columns]
+
+# remove the columns
+data_extra_by_Country <- data_extra_by_Country[, !all_na_columns]
+
+# dataframe of all the variables for 2019 related to legal or political views of most of the countries in the world
+names(data_extra_by_Country)
+
+
+# Save the dataframe as a CSV file
+# write.csv(data_extra_by_Country, "Data/data_extra_by_Country.csv", row.names = FALSE)
+
+```
+
+```{r}
+# merged_df <- merge(data_cleaning_5, data_extra_by_Country, by = "country_name", all.x = TRUE)
+# hay un error que tengo que ver
 ```
